--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500, 600, 700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet" />
         <link rel="stylesheet" href="css/main.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.svg">
@@ -12,5 +11,22 @@
         <title>Densky | Dental Clinic</title>
     </head>
     <body>
+        <div class="container">
+
+            <header class="header">
+                <svg class="header__icon">
+                    <use xlink:href="img/sprite.svg#icon-notes"></use>
+                </svg>
+                <div class="notification__box">
+                    <img class="header__tooth" src="img/tooth.png" alt="touth icon">
+                    <span class="notification__icon"></span>
+                </div>
+
+                <svg class="header__icon header__icon-light">
+                    <use xlink:href="img/sprite.svg#icon-input"></use>
+                </svg>
+            </header>
+
+        </div>
     </body>
 </html>
