--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                 </svg>
             </header>
 
+            <main class="main">
+
+            </main>
+
+            <nav class="sidebar"></nav>
+
         </div>
     </body>
 </html>
