--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.svg">
         
-        <title>Densky | Dental Clinic</title>
+        <title>Densky &#10072; Dental Clinic</title>
     </head>
     <body>
         <div class="container">
@@ -28,10 +28,50 @@
             </header>
 
             <main class="main">
-
+                <section class="section">
+                    <div class="notification__box">
+                        <h1 class="section__title">Active appointment</h1>
+                        <span class="notification__icon notification__icon-title"></span>
+                    </div>
+                    <div class="appointement">
+                        <div class="detail">
+                            <div class="detail__time">
+                                <svg class="detail__icon">
+                                    <use xlink:href="img/sprite.svg#icon-time"></use>
+                                </svg>
+                                <p class="detail__clock">17.07.2020 &horbar; 18:38 PM</p>
+                            </div>
+                            <p class="detail__text">Hyglene and teeth whitening</p>
+                        </div>
+                        <div class="profil">
+                            <img src="img/profil-1.png" alt="" class="profil__image">
+                            <p class="profil__name">Alaina Patterson</p>
+                        </div>
+                    </div>
+                </section>
+                <section class="section">
+                    <h1 class="section__title">Treatment history</h1>
+                    <div class="appointement">
+                        <div class="detail">
+                            <div class="detail__time">
+                                <svg class="detail__icon">
+                                    <use xlink:href="img/sprite.svg#icon-time"></use>
+                                </svg>
+                                <p class="detail__clock">17.07.2020 &horbar; 18:38 PM</p>
+                            </div>
+                            <p class="detail__text">Hyglene and teeth whitening</p>
+                        </div>
+                        <div class="profil">
+                            <img src="img/profil-1.png" alt="" class="profil__image">
+                            <p class="profil__name">Alaina Patterson</p>
+                        </div>
+                    </div>
+                </section>
             </main>
 
-            <nav class="sidebar"></nav>
+            <nav class="sidebar">
+
+            </nav>
 
         </div>
     </body>
