Finishing the main content

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <h1 class="section__title">Active appointment</h1>
                         <span class="notification__icon notification__icon-title"></span>
                     </div>
-                    <div class="appointement">
+                    <div class="card  card__primary">
                         <div class="detail">
                             <div class="detail__time">
                                 <svg class="detail__icon">
@@ -51,19 +51,50 @@
                 </section>
                 <section class="section">
                     <h1 class="section__title">Treatment history</h1>
-                    <div class="appointement">
+                    <div class="card card__secondary">
                         <div class="detail">
                             <div class="detail__time">
                                 <svg class="detail__icon">
-                                    <use xlink:href="img/sprite.svg#icon-time"></use>
+                                    <use xlink:href="img/sprite.svg#icon-calendar"></use>
                                 </svg>
-                                <p class="detail__clock">17.07.2020 &horbar; 18:38 PM</p>
+                                <p class="detail__clock">20.07.2020 &horbar; 31.07.2020</p>
                             </div>
-                            <p class="detail__text">Hyglene and teeth whitening</p>
+                            <p class="detail__text">M3 &horbar; Granulomatous periodontitis</p>
                         </div>
                         <div class="profil">
-                            <img src="img/profil-1.png" alt="" class="profil__image">
-                            <p class="profil__name">Alaina Patterson</p>
+                            <img src="img/profil-3.png" alt="" class="profil__image">
+                            <p class="profil__name">Jozef Steadman</p>
+                        </div>
+                    </div>
+                    <div class="card card__secondary">
+                        <div class="detail">
+                            <div class="detail__time">
+                                <svg class="detail__icon">
+                                    <use xlink:href="img/sprite.svg#icon-calendar"></use>
+                                </svg>
+                                <p class="detail__clock">18.02.2020 &horbar; 07.03.2020</p>
+                            </div>
+                            <p class="detail__text">M6 &horbar; Glandular cheilitis</p>
+                            <p class="detail__text">D5 &horbar; Deep caries</p>
+                        </div>
+                        <div class="profil">
+                            <img src="img/profil-3.png" alt="" class="profil__image">
+                            <p class="profil__name">Jozef Steadman</p>
+                        </div>
+                    </div>
+                    <div class="card card__secondary">
+                        <div class="detail">
+                            <div class="detail__time">
+                                <svg class="detail__icon">
+                                    <use xlink:href="img/sprite.svg#icon-calendar"></use>
+                                </svg>
+                                <p class="detail__clock">22.04.2020 &horbar; 30.04.2020</p>
+                            </div>
+                            <p class="detail__text">M1 &horbar; Diastema</p>
+                        </div>
+                        <div class="profil">
+                            <img src="img/profil-3.png" alt="" class="profil__image">
+                            <p class="profil__name">Jozef Steadman</p>
                         </div>
                     </div>
                 </section>
