--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
                     </div>
                 </section>
                 <section class="section">
-                    <h1 class="section__title">Treatment history</h1>
+                    <div class="title__box">
+                        <h1 class="section__title">Treatment history</h1>
+                        <span class="title__notification">3</span>    
+                    </div>
                     <div class="card card__secondary">
                         <div class="detail">
                             <div class="detail__time">
@@ -78,8 +81,8 @@
                             <p class="detail__text">D5 &horbar; Deep caries</p>
                         </div>
                         <div class="profil">
-                            <img src="img/profil-3.png" alt="" class="profil__image">
-                            <p class="profil__name">Jozef Steadman</p>
+                            <img src="img/profil-2.png" alt="" class="profil__image">
+                            <p class="profil__name">Aurora Marsden</p>
                         </div>
                     </div>
                     <div class="card card__secondary">
@@ -93,8 +96,8 @@
                             <p class="detail__text">M1 &horbar; Diastema</p>
                         </div>
                         <div class="profil">
-                            <img src="img/profil-3.png" alt="" class="profil__image">
-                            <p class="profil__name">Jozef Steadman</p>
+                            <img src="img/profil-5.png" alt="" class="profil__image">
+                            <p class="profil__name">Coen Ward</p>
                         </div>
                     </div>
                 </section>
