--- a/index.html
+++ b/index.html
@@ -104,7 +104,18 @@
             </main>
 
             <nav class="sidebar">
-
+                <div class="discount">
+                    <div class="discount__text">
+                        <div class="title">
+                            <svg class="title__icon">
+                                <use xlink:href="img/sprite.svg#icon-leaf"></use>
+                            </svg>
+                            <h1 class="title__text">Your discount lvl</h1>
+                        </div>
+                        <p class="discount__question">How to increase the discount?</p>
+                    </div>
+                    <p class="discount__number">8%</p>
+                </div>
             </nav>
 
         </div>
