--- a/index.html
+++ b/index.html
@@ -116,6 +116,22 @@
                     </div>
                     <p class="discount__number">8%</p>
                 </div>
+
+                <div class="account">
+                    <img src="img/profil-2.png" alt="account image" class="account__image">
+                    <h1 class="account__name">Isobelle Patterson</h1>
+                    <h3 class="account__description">Aurora</h3>
+                    <div class="phone">
+                        <svg class="phone__icon">
+                            <use xlink:href="img/sprite.svg#icon-phone"></use>
+                        </svg>
+                        <p class="phone__number">+1 877 714 68 05</p>
+                    </div>
+                    <svg class="account__settings">
+                        <use xlink:href="img/sprite.svg#icon-cog"></use>
+                    </svg>
+                </div>
+
             </nav>
 
         </div>
