--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet" />
         <link rel="stylesheet" href="css/main.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.svg">
         
@@ -130,6 +130,53 @@
                     <svg class="account__settings">
                         <use xlink:href="img/sprite.svg#icon-cog"></use>
                     </svg>
+                </div>
+
+                <div class="referrals">
+                    <div class="headeref">
+                        <div class="headeref__box">
+                            <h2 class="headeref__title">Referrals</h2>
+                            <span class="headeref__notification">9</span>    
+                        </div>
+                        <p class="headeref__discount">Discount <span class="headeref__bold">+ $34</span></p>
+                    </div>
+                    <div class="referrals__accounts">
+                        <div class="referral">
+                            <img src="img/profil-4.png" alt="referral" class="referral__image">
+                            <div class="referral__description">
+                                <h3 class="referral__name">Annika Sims</h3>
+                                <p class="referral__date">13.02.2019</p>
+                            </div>
+                        </div>
+                        <div class="referral">
+                            <img src="img/profil-8.png" alt="referral" class="referral__image">
+                            <div class="referral__description">
+                                <h3 class="referral__name">Coen Ward</h3>
+                                <p class="referral__date">24.12.2018</p>
+                            </div>
+                        </div>
+                        <div class="referral">
+                            <img src="img/profil-9.png" alt="referral" class="referral__image">
+                            <div class="referral__description">
+                                <h3 class="referral__name">Bevan Drummond</h3>
+                                <p class="referral__date">05.09.2018</p>
+                            </div>
+                        </div>
+                        <div class="referral">
+                            <img src="img/profil-6.png" alt="referral" class="referral__image">
+                            <div class="referral__description">
+                                <h3 class="referral__name">Aurora Marsden</h3>
+                                <p class="referral__date">18.06.2018</p>
+                            </div>
+                        </div>
+                        <div class="referral">
+                            <img src="img/profil-7.png" alt="referral" class="referral__image">
+                            <div class="referral__description">
+                                <h3 class="referral__name">Jan Bryant</h3>
+                                <p class="referral__date">12.06.2018</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
             </nav>
